--- a/sche/css/calendar.css
+++ b/sche/css/calendar.css
@@ -24,13 +24,14 @@ div.l-cnt {
     background: #fefefe;
     width: 200px;
     position: fixed;
-    margin-top: 70px;
+    margin-top: 60px;
+    margin-left: 10px;
 }
 
 div.r-cnt {
     background: #fefefe;
     width: 100%;
-    padding-left: 200px;
+    padding-left: 215px;
     margin-top: 70px;
 }
 
@@ -42,6 +43,7 @@ span.hm {
 #mini-calendar th {
     height: 30px;
     text-align: center;
+    width: 13%;
 }
 
 #mini-calendar td {
@@ -49,7 +51,7 @@ span.hm {
 }
 
 .today {
-    background: #89c3eb;
+    background: #e8ecef;
 }
 
 #mini-calendar th:nth-of-type(1),
@@ -103,10 +105,68 @@ table.hm tr:last-child th {
     border-radius: 20px;
 }
 
+.nrlDay {
+    background-color: #dddcd6;
+    color: white;
+    border-radius: 20px;
+}
+
+table.miniCal {
+    width: 100%;
+}
+
+table.miniCal th {
+    background: #EEEEEE;
+}
+
+table.miniCal th,
+table.miniCal td {
+    border: 0px solid #CCCCCC;
+    text-align: center;
+    padding: 5px;
+    font-size: 0.5rem;
+}
+
 @media screen and (max-width: 800px) {
+    /*
     ul.topnav li.right,
     ul.topnav li {
         float: none;
+    }
+    */
+    table.miniCal th,
+    table.miniCal td {
+        font-size: 0.7rem;
+    }
+    div.l-cnt {
+        width: 90%;
+        height: 200px;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-rows: 1fr 1fr 1fr;
+    }
+    div.l-cnt-cal {
+        grid-column: 2/4;
+        grid-row: 1/3;
+    }
+    div.l-cnt-btn1 {
+        grid-column: 1/2;
+        grid-row: 1/2;
+        text-align: center;
+    }
+    div.l-cnt-btn2 {
+        grid-column: 1/2;
+        grid-row: 2/3;
+        text-align: center;
+    }
+    div.l-cnt-txt {
+        grid-column: 1/4;
+        grid-row: 3/4;
+    }
+    div.r-cnt {
+        width: 100%;
+        padding-left: 15px;
+        margin-top: 300px;
     }
     #mini-calendar thead {
         display: none;
@@ -119,21 +179,12 @@ table.hm tr:last-child th {
     }
     #mini-calendar td {
         height: auto;
-        display: -webkit-flex;
-        display: flex;
     }
     #mini-calendar .calendar-none {
         display: none
     }
-    #mini-calendar .calendar-labels {
-        padding: 5px;
-    }
-    #mini-calendar [class*=calender-label] {
-        display: inline-block;
-        padding: 5px;
-        margin-top: 0;
-        margin-right: 5px;
-        font-size: 12px;
+    .nrlDay {
+        font-size: 1.5rem;
     }
 }
 
@@ -144,9 +195,19 @@ table.hm tr:last-child th {
     background: white;
     border-top: solid 5px #5d627b;
     box-shadow: 0 3px 5px rgba(0, 0, 0, 0.22);
+    width: 90%;
 }
 
 .boxSche p {
-    margin: 0;
     padding: 0;
+}
+
+span.title {
+    font-size: 0.6rem;
+    color: gray;
+}
+
+span.titleS {
+    font-size: 0.6rem;
+    color: #d3cfd9;
 }
