--- a/sche/css/main.css
+++ b/sche/css/main.css
@@ -7,6 +7,10 @@ span.err {
     color: red;
 }
 
+body {
+    margin: 0
+}
+
 a {
     text-decoration: none;
 }
@@ -218,62 +222,82 @@ button.del:hover {
 }
 
 table.vw {
-    border-collapse:separate;
+    border-collapse: separate;
     border-spacing: 0;
-      margin: 0 auto;
-  }
-  
-  table.vw th:first-child{
+    margin: 0 auto;
+}
+
+table.vw th:first-child {
     border-radius: 5px 0 0 0;
-  }
-  
-  table.vw th:last-child{
+}
+
+table.vw th:last-child {
     border-radius: 0 5px 0 0;
     border-right: 1px solid #3c6690;
-  }
-  
-  table.vw th{
+}
+
+table.vw th {
     text-align: center;
-    color:white;
-    background: linear-gradient(#829ebc,#225588);
+    color: white;
+    background: linear-gradient(#829ebc, #225588);
     border-left: 1px solid #3c6690;
     border-top: 1px solid #3c6690;
     border-bottom: 1px solid #3c6690;
-    box-shadow: 0px 1px 1px rgba(255,255,255,0.3) inset;
+    box-shadow: 0px 1px 1px rgba(255, 255, 255, 0.3) inset;
     padding: 10px 0;
-  }
-  
-  table.vw th.add{
+}
+
+table.vw th.add {
     text-align: center;
-    color:white;
-    background: linear-gradient(#f8b862,#f39800);
+    color: white;
+    background: linear-gradient(#f8b862, #f39800);
     border-left: 1px solid #3c6690;
     border-top: 1px solid #3c6690;
     border-bottom: 1px solid #3c6690;
-    box-shadow: 0px 1px 1px rgba(255,255,255,0.3) inset;
+    box-shadow: 0px 1px 1px rgba(255, 255, 255, 0.3) inset;
     padding: 5px 0;
-  }
-  
-  table.vw td{
+}
+
+table.vw td {
     text-align: center;
     border-left: 1px solid #a8b7c5;
     border-bottom: 1px solid #a8b7c5;
-    border-top:none;
+    border-top: none;
     box-shadow: 0px -3px 5px 1px #eee inset;
     padding: 10px 0;
-      background-color: white;
-      vertical-align: middle;
-  }
-  
-  table.vw td:last-child{
+    background-color: white;
+    vertical-align: middle;
+}
+
+table.vw td:last-child {
     border-right: 1px solid #a8b7c5;
-  }
-  
-  table.vw tr:last-child td:first-child {
+}
+
+table.vw tr:last-child td:first-child {
     border-radius: 0 0 0 5px;
-  }
-  
-  table.vw tr:last-child td:last-child {
+}
+
+table.vw tr:last-child td:last-child {
     border-radius: 0 0 5px 0;
-  }
-      
+}
+
+@media screen and (max-width: 800px) {
+    div.nav {
+        width: 100%;
+    }
+    table.edit {
+        width: 100%;
+    }
+    button.sbmt {
+        width: 100%;
+    }
+    table.edit th {
+        width: 120px;
+    }
+    .f130P {
+        font-size: 100%;
+    }
+    table.vw td {
+        font-size: 100%;
+    }
+}
