--- a/hearing/css/main.css
+++ b/hearing/css/main.css
@@ -18,6 +18,10 @@
     font-size: 150%;
 }
 
+.wdtSSS {
+    width: 20%;
+}
+
 .wdtSS {
     width: 40%;
 }
@@ -46,6 +50,12 @@ div.menu {
 
 body {
     margin: 0;
+}
+
+input.lbl {
+    border: none;
+    background: none;
+    -webkit-appearance: none;
 }
 
 ul.topnav {
@@ -141,4 +151,54 @@ ul.topnav li.user {
 .ff {
     width: 100%;
     height: 100%;
+}
+
+table.calc {
+    border-collapse: collapse;
+    font-size: 80%;
+    margin: 0 auto;
+    background-color: #f0f0f0;
+}
+
+.area1 {
+    width: 150px;
+}
+
+.area2 {
+    width: 150px;
+}
+
+.area3 {
+    width: 150px;
+}
+
+.area4 {
+    width: 150px;
+}
+
+.area5 {
+    width: 150px;
+}
+
+.area6 {
+    width: 150px;
+}
+
+.area7 {
+    width: 150px;
+}
+
+td.uline {
+    border: none;
+    border-bottom: 1px solid black;
+}
+
+td.tani {
+    border: none;
+    text-align: left;
+}
+
+td.fline {
+    border: none;
+    border: 1px solid black;
 }
