--- a/hearing/css/main.css
+++ b/hearing/css/main.css
@@ -202,3 +202,25 @@ td.fline {
     border: none;
     border: 1px solid black;
 }
+
+table.rep {
+    border-collapse: collapse;
+    margin: 0 auto;
+}
+
+.report1,
+.report2,
+.report3,
+.report4,
+.report5,
+.report6,
+.report7,
+.report8,
+.report9 {
+    width: 150px;
+}
+
+.redBold {
+    color: red;
+    font-weight: bold;
+}
