--- a/hearing/css/main.css
+++ b/hearing/css/main.css
@@ -78,7 +78,8 @@ input.number2 {
     text-align: right;
     ime-mode: disabled;
 }
-.imeon{
+
+.imeon {
     ime-mode: active;
 }
 
@@ -377,7 +378,8 @@ textarea.sakubun {
     color: #FFF;
     border-bottom: solid 4px #627295;
     border-radius: 3px;
-    height: 80px;
+    height: 50px;
+    padding-top: 40px;
 }
 
 .btn-sakubun:active,
