--- a/psys_c/asset/css/main.css
+++ b/psys_c/asset/css/main.css
@@ -12,24 +12,27 @@
     position: fixed;
     bottom: 0;
     width: 100%;
-    height: 140px;
+    height: 40px;
     background: #0f2350;
+    padding: 2em 0 2em 0;
 }
 
 #footer .copyright {
     color: rgba(255, 255, 255, 0.5);
+    margin: 0 0 0.8em 0;
 }
 
 #geta {
-    height: 140px;
+    height: 40px;
 }
 
 @media screen and (max-width: 736px) {
     #footer {
-        height: 100px;
+        height: 40px;
+        padding: 0.5em 0 ;
     }
     #geta {
-        height: 100px;
+        height: 40px;
     }
 }
 
