--- a/psys_c/asset/css/main.css
+++ b/psys_c/asset/css/main.css
@@ -85,6 +85,18 @@
     color: #fff !important;
 }
 
+#bannerErr {
+    background-color: #f8f8f8;
+    color: rgb(216, 54, 54);
+    text-align: center;
+    cursor: default;
+    padding: 1em 0 0 0;
+}
+
+#bannerErr h3 {
+    color: #942020;
+}
+
 ul.actions2 li {
     display: inline-block;
     padding: 0 0 0 0;
