--- a/psys/asset/css/u_main.css
+++ b/psys/asset/css/u_main.css
@@ -1,6 +1,16 @@
 body {
     background-color: #fff5d7;
-    margin: 0%;
+    margin: 0 auto;
+    width: 100%;
+}
+
+#menu {
+    display: flex;
+    width: 100%;
+    height: 60px;
+    margin: 0 auto;
+    align-items: stretch;
+    justify-content: center;
 }
 
 #top_menu {
@@ -9,15 +19,30 @@ body {
     justify-content: space-around;
     background-color: #fff;
     padding: 5px;
-    width: 100%;
-    position: fixed;   
-    top: 0; 
+    width: 800px;
+    position: fixed;
+    top: 0;
+    height: 50px;
+}
+
+#top_menu_info {
+    display: flex;
+    align-items: stretch;
+    justify-content: space-around;
+    background-color: #ffc9ce;
+    padding: 5px;
+    width: 800px;
+    position: fixed;
+    top: 0;
     height: 50px;
 }
 
 #contents {
+    width: 800px;
     margin-top: 60px;
     text-align: center;
+    margin: 0 auto;
+    padding-bottom: 50px;
 }
 
 #contents div input {
@@ -39,13 +64,15 @@ span.err {
     color: #fff;
     border-radius: 10px;
 }
-.f1rem{
+
+.f1rem {
     font-size: 1rem;
 }
 
 .w25p {
     width: 25%;
 }
+
 .w60p {
     width: 60%;
 }
@@ -57,6 +84,7 @@ span.err {
 .w100p {
     width: 100%;
 }
+
 .btn-red {
     background-color: #D90012;
 }
@@ -71,7 +99,6 @@ span.err {
     background-color: #16176C;
 }
 
-
 .input-text {
     border: 0;
     padding: 10px;
@@ -80,7 +107,8 @@ span.err {
     border: solid 1px #ccc;
     margin: 0 0 30px;
 }
-.bgimage{
+
+.bgimage {
     border: 0;
     width: 100%;
     display: block;
@@ -90,7 +118,7 @@ span.err {
     height: 3rem;
 }
 
-#point{
+#point {
     background-color: #ee0000;
     color: white;
     font-size: 2.5rem;
@@ -100,42 +128,49 @@ span.err {
     margin: 0;
 }
 
-#point img{
+#point img {
     height: 3rem;
 }
 
-div.msg{
+div.msg {
     border: 1px solid #006fb6;
     color: #006fb6;
     font-size: 0.8rem;
     margin: 0 auto;
 }
 
-div.waku{
+div.waku {
     margin: 0 auto;
 }
 
-div.info{
+div.info {
     border: 1px solid #ee0000;
     color: #ee0000;
     font-size: 0.8rem;
     margin: 0 auto;
 }
-.red{
+
+.red {
     color: #ee0000;
     font-weight: bold;
 }
 
+.lightgrey {
+    color: #afafaf;
+}
+
 .rDiv {
     margin: 0 auto;
-    border-radius: 10px; /* ボックスの四つ角を丸くする */
+    border-radius: 10px;
+    /* ボックスの四つ角を丸くする */
     background-color: white;
     padding-bottom: 10px;
     margin-bottom: 10px;
     font-size: 0.9rem;
     font-weight: bold;
 }
-.rDivTitle{
+
+.rDivTitle {
     background-color: #006fb6;
     color: #fff;
     font-size: 1.5rem;
@@ -143,7 +178,8 @@ div.info{
     border-radius: 10px 10px 0 0;
     margin-bottom: 20px;
 }
-.rDivTitleGrey{
+
+.rDivTitleGrey {
     background-color: #b0b0b0;
     color: #fff;
     font-size: 1.5rem;
@@ -154,18 +190,66 @@ div.info{
 
 .swiper-button-prev,
 .swiper-button-next {
-  width: 32px;
-  height: 32px;
-  margin-top: -16px;
+    width: 32px;
+    height: 32px;
+    margin-top: -16px;
 }
+
 .swiper-button-prev {
     background: url(../image/swiper3.png) no-repeat center center / contain;
 }
+
 .swiper-button-next {
     background: url(../image/swiper4.png) no-repeat center center / contain;
 }
 
-@media screen and (max-width: 736px) {
+.infoMenu {
+    width: 98%;
+    padding: 0.3em 0em;
+    border-top: solid 1px #ffc9ce;
+    border-bottom: solid 1px #ffc9ce;
+    font-size: 1.5rem;
+    text-align: left;
+    background: #fff;
+    margin: 0 auto;
+    background-image: url(../image/u_menu_next.png);
+    background-repeat: no-repeat;
+    background-position: right;
+    background-size: contain;
+}
 
-    
+.infoMenuJump {
+    width: 98%;
+    padding: 0.3em 0em;
+    border-top: solid 1px #ffc9ce;
+    border-bottom: solid 1px #ffc9ce;
+    font-size: 1.5rem;
+    text-align: left;
+    background: #fff;
+    margin: 0 auto;
+    background-image: url(../image/u_menu_jump.png);
+    background-repeat: no-repeat;
+    background-position: right;
+    background-size: contain;
+}
+
+.infoText {
+    width: 98%;
+    padding: 1em 0em 2em 0em;
+    font-size: 1.0rem;
+    text-align: left;
+    margin: 0 auto;
+}
+
+@media screen and (max-width: 736px) {
+    #top_menu {
+        width: 100%;
+    }
+    #top_menu_info {
+        width: 100%;
+    }
+    #contents {
+        width: 100%;
+        text-align: center;
+    }
 }
