--- a/psys/asset/css/accordion/hum.css
+++ b/psys/asset/css/accordion/hum.css
@@ -13,7 +13,7 @@
     transition: width 475ms ease-out, transform 450ms ease, border-radius .8s .1s ease;
     border-bottom-left-radius: 100vw;
     background-color: #2e2cb6;
-    background-color: rgba(27, 30, 177, 0.8);
+    background-color: rgba(255, 241, 199, 0.9);
     z-index: 9998;
 }
 
@@ -297,7 +297,7 @@ input.hamburger:checked~label>i {
 
 input.hamburger:checked~label>i:before {
     transform: translate(-50%, -50%) rotate(315deg);
-    background-color: #FEFEFE;
+    background-color: #ec0000;
 }
 
 input.hamburger:checked~label>i:before+#scrl {
@@ -307,11 +307,11 @@ input.hamburger:checked~label>i:before+#scrl {
 
 input.hamburger:checked~label>i:after {
     transform: translate(-50%, -50%) rotate(-315deg);
-    background-color: #FEFEFE;
+    background-color: #ec0000;
 }
 
 input.hamburger:checked~label close {
-    color: #FEFEFE;
+    color: #ec0000;
     width: 100%;
 }
 
