--- a/psys/asset/css/accordion/style.css
+++ b/psys/asset/css/accordion/style.css
@@ -6,6 +6,11 @@
     margin: 0px auto;
 }
 
+#st-accordion {
+    position: absolute;
+    top: 58px;
+}
+
 .st-accordion {
     width: 100%;
     min-width: 270px;
@@ -14,6 +19,20 @@
 .st-accordion ul li {
     height: 50px;
     overflow: hidden;
+    background-color: white;
+    padding-left: 10px;
+    background-image: url(../../image/u_menu_next.png);
+    background-repeat: no-repeat;
+    background-position: right;
+    background-size: contain;
+}
+
+#st-title {
+    position: absolute;
+    top: 0px;
+    width: 100%;
+    background-color: #ffcace;
+    padding: 0.2rem;
 }
 
 
@@ -36,10 +55,10 @@
 */
 
 .st-accordion ul li>a {
-    border-top: solid 1px #ffffff;
-    border-bottom: solid 1px #ffffff;
-    color: white;
-    font-size: 1.5rem;
+    border-top: solid 1px #ffcace;
+    border-bottom: solid 1px #ffcace;
+    color: black;
+    font-size: 1.3rem;
     display: block;
     position: relative;
     line-height: 50px;
